# rss_news_reader

./: .gitignore  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  __main__.py  requirements.txt  setup.cfg  setup.py
rss_parser/: arg_parser.py  colors.py  news.html  news_handler.py  news_object.py  news_separator.py  news_storage.py  parser_management.py  rss_reader.py  stored_news.txt
rss_parser/file_converters/: html_converter.py  pdf_converter.py
rss_parser/file_converters/fonts/: DejaVuSansCondensed.pkl
rss_parser/file_converters/templates/: html_template.html
rss_parser/logger/: __init__.py  setup_logger.py
rss_parser/web_parser/: data_checkers.py  web_parser.py
tests/: test_arg_parser.py  test_news_object.py  test_news_separator.py  test_news_storage.py  test_parser_management.py  test_pdf_converter.py  test_web_parser.py
