[metadata]
name = rss_reader
version = 5.0.0
requires-python = ">=3.9"
author = VladLapkovsky
author_email = vladlapkovsky@gmail.com
description = Pure Python command-line RSS reader.
long_description = file: README.rst
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt
platform = any


classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = find:
python_requires = >=3.9
include_package_data = True


[flake8]
inline-quotes = "
exclude = .git,__pycache__, venv
max-line-length = 120
max-complexity = 10
extend-ignore = WPS306